[Bugfix] Fixed horizontal scrollbar WVR-2978 (#7180)

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -34,11 +34,17 @@
 
 html, body , #app {
   width: 100%;
-  max-width: 100vw;
+  max-width: 100%;
   height: 100%;
   margin: 0;
   padding: 0;
   overflow: hidden;
+  font-family: 'Lato', sans-serif;
+  color: var(--text-color);
+  visibility: visible !important;
+}
+// This needed in WebComponent mode
+#note-state-popup-portal {
   font-family: 'Lato', sans-serif;
   color: var(--text-color);
 }
@@ -69,7 +75,7 @@ input, textarea, select {
 .App {
   display: flex;
   flex-direction: column;
-  position: fixed;
+  position: static; // position relative and fixed both caused issues in the past
   width: 100%;
   height: 100%;
   margin: 0;
